[package]
name = "cmdplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-youtube3 = "*"
serde = "^1.0"
serde_json = "^1.0"
rustube = { version = "0.6.0", features = ["blocking"] }
tokio = { version = "*", features = ["full"] }
